--- a/kickstart/files/lab-traefik.toml
+++ b/kickstart/files/lab-traefik.toml
@@ -51,3 +51,17 @@ rule = "Host:proxmox.lab.bltavares.com"
 url = "https://192.168.15.3:8006"
 [backends.proxmox.servers.server1]
 url = "https://192.168.15.4:8006"
+
+[frontends.omv]
+backend = "omv"
+[frontends.omv.routes.route0]
+rule = "Host:omv.lab.bltavares.com"
+[backends.omv.servers.server0]
+url = "https://omv.zerotier.bltavares.com:443"
+
+[frontends.archivebox]
+backend = "archivebox"
+[frontends.archivebox.routes.route0]
+rule = "Host:archivebox.lab.bltavares.com"
+[backends.archivebox.servers.server0]
+url = "http://omv.zerotier.bltavares.com:8000"
