--- a/nomad/lab/config/nodes.toml
+++ b/nomad/lab/config/nodes.toml
@@ -4,6 +4,8 @@ service = "proxmox"
 [http.services.proxmox.loadBalancer]
 serversTransport = "insecureHttps"
 [[http.services.proxmox.loadBalancer.servers]]
+url = "https://192.168.15.2:8006"
+[[http.services.proxmox.loadBalancer.servers]]
 url = "https://192.168.15.4:8006"
 [[http.services.proxmox.loadBalancer.servers]]
 url = "https://192.168.15.6:8006"
